Init Django project and create Dockerfile with conda environment

--- a/environment.yml
+++ b/environment.yml
@@ -3,27 +3,38 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - astroid=2.4.2=py37_0
   - ca-certificates=2021.1.19=h06a4308_0
   - certifi=2020.12.5=py37h06a4308_0
+  - gunicorn=20.0.4=py37_0
+  - isort=5.6.4=py_0
+  - lazy-object-proxy=1.4.3=py37h27cfd23_2
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
+  - mccabe=0.6.1=py37_1
   - ncurses=6.2=he6710b0_1
   - openssl=1.1.1i=h27cfd23_0
   - pip=20.3.3=py37h06a4308_0
+  - pylint=2.6.0=py37_0
   - python=3.7.9=h7579374_0
   - readline=8.0=h7b6447c_0
   - setuptools=51.3.3=py37h06a4308_4
+  - six=1.15.0=py37h06a4308_0
   - sqlite=3.33.0=h62c20be_0
   - tk=8.6.10=hbc83047_0
+  - toml=0.10.1=py_0
+  - typed-ast=1.4.2=py37h27cfd23_1
   - wheel=0.36.2=pyhd3eb1b0_0
+  - wrapt=1.11.2=py37h7b6447c_0
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - asgiref==3.3.1
     - django==3.1.5
+    - python-dotenv==0.15.0
     - pytz==2020.5
     - sqlparse==0.4.1
 prefix: /home/rexcolt/miniconda3/envs/cheaf-backend-test
