--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: |
+      git fetch --prune --unshallow
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
