Rename step on develop action

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -40,5 +40,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run migrations
       run: python manage.py migrate
-    - name: Run tests
+    - name: Run tests on all apps
       run: python manage.py test
