--- a/environment.yml
+++ b/environment.yml
@@ -35,10 +35,16 @@ dependencies:
     - asgiref==3.3.1
     - dj-database-url==0.5.0
     - django==3.1.5
+    - django-filter==2.4.0
     - django-heroku==0.3.1
+    - djangorestframework==3.12.2
+    - importlib-metadata==3.4.0
+    - markdown==3.3.3
     - psycopg2==2.8.6
     - python-dotenv==0.15.0
     - pytz==2020.5
     - sqlparse==0.4.1
+    - typing-extensions==3.7.4.3
     - whitenoise==5.2.0
+    - zipp==3.4.0
 prefix: /home/rexcolt/miniconda3/envs/cheaf-backend-test
