--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,10 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - astroid=2.4.2=py37_0
+  - autopep8=1.5.4=py_0
   - ca-certificates=2021.1.19=h06a4308_0
   - certifi=2020.12.5=py37h06a4308_0
+  - flake8=3.8.4=py_0
   - gunicorn=20.0.4=py37_0
   - isort=5.6.4=py_0
   - lazy-object-proxy=1.4.3=py37h27cfd23_2
@@ -18,6 +20,8 @@ dependencies:
   - ncurses=6.2=he6710b0_1
   - openssl=1.1.1i=h27cfd23_0
   - pip=20.3.3=py37h06a4308_0
+  - pycodestyle=2.6.0=py_0
+  - pyflakes=2.2.0=py_0
   - pylint=2.6.0=py37_0
   - python=3.7.9=h7579374_0
   - readline=8.0=h7b6447c_0
@@ -30,21 +34,28 @@ dependencies:
   - wheel=0.36.2=pyhd3eb1b0_0
   - wrapt=1.11.2=py37h7b6447c_0
   - xz=5.2.5=h7b6447c_0
+  - zipp=3.4.0=pyhd3eb1b0_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - asgiref==3.3.1
+    - chardet==4.0.0
     - dj-database-url==0.5.0
     - django==3.1.5
     - django-filter==2.4.0
     - django-heroku==0.3.1
     - djangorestframework==3.12.2
+    - geographiclib==1.50
+    - geopy==2.1.0
+    - idna==2.10
     - importlib-metadata==3.4.0
     - markdown==3.3.3
+    - nose==1.3.7
     - psycopg2==2.8.6
     - python-dotenv==0.15.0
     - pytz==2020.5
+    - requests==2.25.1
     - sqlparse==0.4.1
     - typing-extensions==3.7.4.3
+    - urllib3==1.26.2
     - whitenoise==5.2.0
-    - zipp==3.4.0
 prefix: /home/rexcolt/miniconda3/envs/cheaf-backend-test
